--- a/simpath.cabal
+++ b/simpath.cabal
@@ -27,7 +27,7 @@ library
 
 executable simpath
   main-is:             Main.hs
-  -- other-modules:
+  other-modules:       Simpath.Border, Simpath.CounterMap, Simpath.Edge, Simpath.Common, Simpath.Frontier
   other-extensions:    FlexibleContexts
   build-depends:       base >=4.11 && <4.12, mtl >=2.2 && <2.3, containers >=0.5 && <0.6
   -- hs-source-dirs:
